# LololBot

./: .replit  bot.py  db.py  db_connect.py  pyproject.toml  requirements.txt  setup_db.py
cogs/: levelling.py
db/: main.db
