[tool.poetry]
name = "repl_python3_beta_LololBot"
version = "0.1.0"
description = ""
authors = ["v8ive <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
